changes on the Donor_registration page changeson the dashboard

--- a/about_us.html
+++ b/about_us.html
@@ -3,11 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="CSS/dashboard.css" rel="stylesheet">
+        <link rel="stylesheet" href="CSS/about.css">
         <title>About</title>
     </head>
 </html>
 <body>
-    <h1>ABOUT US</h1>
+    <div class="text">
+        <h1>About Us</h1>
+        <h3>Welcome to </h3>
+        <p>At Cloud Blood Bank, we are dedicated to saving lives by making the process of blood donation and request seamless and efficient. Our cloud-based platform connects blood donors with those in need,
+         leveraging the power of technology to ensure that life-saving blood is available when and where it is needed most</p>
+        <h3>Our Mission</h3>
+        <p>Our mission is to create a reliable, accessible, and user-friendly blood bank system that enhances the efficiency of blood donation and distribution. We strive to bridge the gap between donors and recipients by providing a
+             platform that facilitates easy blood donation and quick access to blood for those in need.</p>
+        <h3>How It Works</h3>
+        <h4>For Donors:</h4>
+        <ul>
+            <li>Registration: After signing up , go ahead and provide your details including blood type and contact information and the rest.</li>
+            <li>Notification: Receive notifications when there is a need for your blood type in your area.</li>
+            <li>Donation: Schedule a donation at a nearby blood bank or donation camp.</li>
+        </ul>
+    </div>
     
+
+
 </body>
