--- a/Dashboard/bloodrqst.html
+++ b/Dashboard/bloodrqst.html
@@ -39,6 +39,7 @@
                               <th scope="col">Date Of Birth</th>
                               <th scope="col">Contact Info</th>
                               <th scope="col">Address</th>
+                              <th scope="col">Urgency Level</th>
                               <th scope="col">Medical Condition</th>
                               <th>Action</th>
                             </tr>
@@ -95,6 +96,10 @@
                             <input type="Date" class="form-control" id="addGender">
                         </div>
                         <div class="mb-3">
+                            <label for="addUrgencyLevel" class="form-label">Urgency Level</label>
+                            <input type="address" class="form-control" id="addAddress">
+                        </div>
+                        <div class="mb-3">
                             <label for="addContactInfo" class="form-label">Contact information</label>
                             <input type="Date" class="form-control" id="addContactInfo">
                         </div>
@@ -137,6 +142,10 @@
                         <div class="mb-3">
                             <label for="editGender" class="form-label">Gender</label>
                             <input type="date" class="form-control" id="editGender">
+                        </div>
+                        <div class="mb-3">
+                            <label for="editUrgencyLevel" class="form-label">Urgency Level</label>
+                            <input type="text" class="form-control" id="editUrgencyLevel">
                         </div>
                         <div class="mb-3">
                             <label for="editContactInfo" class="form-label">Contact Info</label>
