--- a/Dashboard/home.html
+++ b/Dashboard/home.html
@@ -112,7 +112,7 @@
                     <div class="sub-menu-wrap" id="subMenu">
                        <div class="sub-menu">
                         <div class="user-info">
-                            <h3>Regional Hospital</h3>
+                            <h3>Regional Hospital Bamenda</h3>
                         </div>
                         <hr>
                         <a href="#" class="sub-menu-link">
