--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <img src="assets/images/R (1).jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">How your Diffusion helps </h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text"> Donated blood is essential for surgeries, cancer treatments, chronic illnesses, and traumatic injuries. Whether a patient receives whole blood, red cells, platelets, or plasma, it all starts with a generous donation.</p>
                 </div>
                 <div class="card-footer">
                   <a href="#">Read More</a>
@@ -270,7 +270,7 @@
             <circle class="drop drop1" cx="20" cy="2" r="1.8" />
             <circle class="drop drop2" cx="25" cy="2.5" r="1.5" />
             <circle class="drop drop3" cx="16" cy="2.8" r="1.2" />
-            <use id="wave1" class="wave" xlink:href="#carouselExample" x="0" y="1" />
+            <use id="wave1" class="wave" xlink:href="#navbarNav" x="0" y="1" />
           </g>
         </svg>
         <div class="text-container">
