--- a/Dashboard/bloodstock.html
+++ b/Dashboard/bloodstock.html
@@ -36,7 +36,7 @@
                               <th scope="col">Blood Type</th>
                               <th scope="col">Donation Date</th>
                               <th scope="col">Expiry Date</th>
-                              <th scope="col">Donor ID</th>
+                              <th scope="col">Donor Name</th>
                               <th scope="col">Status</th>
                               <th>Action</th>
                             </tr>
@@ -44,13 +44,11 @@
                           <tbody id="donorTableBody">
                             <tr>
                               <th scope="row">1</th>
-                              <td>Therasa</td>
                               <td>AB+</td>
-                              <td>Female</td>
                               <td>03/11/2000</td>
-                              <td>23456789</td>
-                              <td>Santa</td>
-                              <td>fcsvdghbjknlc</td>
+                              <td>25/04/2025</td>
+                              <td>Theresa</td>
+                              <td>Available</td>
                               <td><i class="ri-edit-line" onclick="openEditModal(this)"></i> <i class="ri-delete-bin-6-line"></i></td>
                             </tr>
                             <tr>
@@ -93,7 +91,7 @@
                             <input type="Date" class="form-control" id="addExpiryDate">
                         </div>
                         <div class="mb-3">
-                            <label for="addDonorId" class="form-label">Donor ID</label>
+                            <label for="addDonorName" class="form-label">Donor Name</label>
                             <input type="number" class="form-control" id="addDonorId">
                         </div>
                         <div class="mb-3">
