--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="CSS/input.css" rel="stylesheet">
-  <title>BLood Bank</title>
+  <title>E-Vitalant</title>
+  <link rel="icon" href="assets/images/logoss (2).png" type="image/png">
 
   <!--boostrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
@@ -24,7 +25,11 @@
    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"> 
             <div class="container-fluid">
               <!--Navbar Content-->
-              <a class="navbar-brand" href="#">One<span>Blood</span></a>
+              <a class="navbar-brand" href="#">
+                <img src="assets/images/logoss (2).png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                E-<span>Vitalant</span>
+            </a>
+            
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -46,7 +51,7 @@
                     <a class="nav-link" href="contact.html">Contact Us</a>
                   </li>
                   <div id="d-flex">
-                    <a href="login_dashboard.html">
+                    <a href="Donors_Dashboard/donor_dashboard.html">
                       <button class="btn">Dashboard</button>
                     </a>
                     <a href="login_signup.html">
@@ -191,23 +196,23 @@
                 </p>
                 <p>
                   <ion-icon name="heart-outline"></ion-icon>
-                  B+,Awah Margeret ,2024-05-13
+                  O+,Ajong Pius,2024-06-13
                 </p>
                 <p>
                   <ion-icon name="heart-outline"></ion-icon>
-                  B+,Awah Margeret ,2024-05-13
+                  AB-,Chai Nazareth ,2024-06-17
                 </p>
                 <p>
                   <ion-icon name="heart-outline"></ion-icon>
-                  B+,Awah Margeret ,2024-05-13
+                  A-,Achu Joyceline ,2024-05-29
                 </p>
                 <p>
                   <ion-icon name="heart-outline"></ion-icon>
-                  B+,Awah Margeret ,2024-05-13
+                  O-,Forgab Randy ,2024-05-21
                 </p>
                 <p>
                   <ion-icon name="heart-outline"></ion-icon>
-                  B+,Awah Margeret ,2024-05-13
+                  AB-,Juscar Badmus,2024-05-29
                 </p>
               </ul>
             </div>
