--- a/login_signup.html
+++ b/login_signup.html
@@ -19,14 +19,13 @@
                         <a href="#" class="icon"><ion-icon name="logo-instagram"></ion-icon></a> 
                         <a href="#" class="icon"><ion-icon name="logo-github"></ion-icon></a> 
                     </div> 
-                    <span>Use your email for registration</span> 
+                    <span>Register as a <a href="Requester_signup.html">Recipient</a>/<a href="Donor_signup.html">Donor</a></span> 
                     <input type="text" placeholder="Name"> 
                     <input type="email" placeholder="Email"> 
                     <input type="number" placeholder="Phone-number">  
                     <input type="password" placeholder="Create Password">
                     <input type="password" placeholder="Confirm Password">
-                    
-
+            
                     <button>Signup</button>                   
                 </form>   
             </div>
