--- a/Donor_signup.html
+++ b/Donor_signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="CSS/registration.css" rel="stylesheet">
-    <title>Donate Blood</title>
+    <title>Donor Registration</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -14,13 +14,27 @@
         <!--<img class="bg-image" src="assets/images/istockphoto-1338751268-612x612.jpg">-->
         <div class="container-fluid">
             <header class="text-center">
-               <h1 class="display-6">Donate Blood</h1>
+               <h1 class="display-6">Register as  a Blood Donor</h1>
             </header>
 
         </div>
         <section class="container my-2  w-50 text-light p-2">
             <form class="row g-3">
-              <div class="col-md-12">
+              <div class="col-md-4">
+                <label for="validationCustom01" class="form-label">First name</label>
+                <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+              </div>
+              <div class="col-md-4">
+                <label for="validationCustom02" class="form-label">Last name</label>
+                <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+              </div>
+              <div class="col-md-4">
                 <label for="validationCustomUsername" class="form-label">Username</label>
                 <div class="input-group has-validation">
                   <span class="input-group-text" id="inputGroupPrepend">@</span>
@@ -30,9 +44,39 @@
                   </div>
                 </div>
               </div>
+                <div class="col-md-6">
+                  <label for="inputEmail4" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="inputEmail4">
+                </div>
+                <div class="col-md-6">
+                  <label for="inputNumber" class="form-label">Phone number</label>
+                  <input type="text" class="form-control" id="inputPassword4">
+                </div>
+                <div class="col-md-6">
+                    <label for="createPassword" class="form-label">Create Password</label>
+                    <input type="password" class="form-control" id="inputPassword">
+                  </div>
+                  <div class="col-md-6">
+                    <label for="confrimPassword" class="form-label">Confirm Password</label>
+                    <input type="password" class="form-control" id="ConfirmPassword">
+                  </div>
                 <div class="col-12">
                   <label for="inputAddress" class="form-label">Address</label>
                   <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                </div>
+                <div class="col-12">
+                  <label for="inputGender" class="form-label">Gender</label>
+                  <select id="inputState" class="form-select">
+                  <option selected>Female</option>
+                  <option>Male</option>
+                  </select>
+                  <label for="dob" class="form-label">Date of Birth:</label>
+                  <input type="date" id="dob" name="dob" class="form-control">
+                  <label for="inputAddress2" class="form-label">New Donor?</label>
+                  <select id="inputState" class="form-select">
+                  <option selected>Yes</option>
+                  <option>No</option>
+                  </select>
                 </div>
                 <div class="col-12">
                   <label for="inputState" class="form-label">Blood Group</label>
@@ -48,14 +92,17 @@
                     <option>O-</option>
                   </select>
                 </div>
-                <div class="col-12">
-                  <label for="inputState" class="form-label">Urgency Level</label>
-                  <select id="inputState" class="form-select">
-                    <option selected>Critical</option>
-                    <option>Major</option>
-                    <option>Medium</option>
-                  </select>
-              </div>
+                
+                </div>
+                <div class="col-md-6">
+                  <label for="inputCity" class="form-label">City</label>
+                  <input type="text" class="form-control" id="inputCity">
+                </div>
+                <div class="col-md-6">
+                    <label for="inputRegion" class="form-label">Region</label>
+                    <input type="text" class="form-control" id="inputRegion">
+                  </div>
+                
                 <div class="col-12">
                   <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="gridCheck">
@@ -65,7 +112,7 @@
                   </div>
                 </div>
                 <div class="col-12">
-                  <button type="submit" class="btnr">Donate</button>
+                  <button type="submit" class="btn btn-primary">Register</button>
                 </div>
               </form>
         </section>
