--- a/Donors_Dashboard/donor_dashboard.html
+++ b/Donors_Dashboard/donor_dashboard.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../CSS/dashboard.css">
+        <link rel="stylesheet" href="../CSS/donor_dashboard.css">
         <title>Dashboard</title>
         <!--Boostrap-->
       
@@ -18,8 +18,8 @@
                 <ul>
                     <li>
                         <a href="#">
-                            <span class="icon " id="logo">
-                                <img src="../assets/images/logoooo (2).png">
+                            <span class="icon" id="logo">
+                                <img src="/assets/images/logoooo (2).png">
                             </span>
                             <span class="title">E-Vitalant</span>
                         </a>
@@ -34,53 +34,30 @@
                         </a>
                     </li>
                     <li>
-                        <a href="donor.html">
+                        <a href="blood_donated.html">
                             <span class="icon">
                                 <i class="ri-hand-heart-fill"></i>
                             </span>
-                            <span class="title">Donor</span>
+                            <span class="title">Blood Donated</span>
                         </a>
                     </li>
                     <li>
-                        <a href="donations.html">
+                        <a href="apointment.html">
                             <span class="icon">
-                                <i class="ri-hand-heart-line"></i>
+                                <i class="ri-calendar-schedule-line"></i>
                             </span>
-                            <span class="title">Donations</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="bloodrqst.html">
-                            <span class="icon">
-                                <i class="ri-refresh-line"></i>
-                            </span>
-                            <span class="title">Blood Request</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="request_history.html">
-                            <span class="icon">
-                                <i class="ri-history-line"></i>
-                            </span>
-                            <span class="title">Requested History</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="bloodstock.html">
-                            <span class="icon">
-                                <i class="ri-store-3-line"></i>
-                            </span>
-                            <span class="title">Blood Stock</span>
+                            <span class="title">Appointments</span>
                         </a>
                     </li>
                     <li>
                         <a href="messages.html">
-                            <span class="icon">
+                            <span class="icon" >
                                 <i class="ri-message-line"></i>
                             </span>
                             <span class="title">Messages</span>
                         </a>
                     </li>
+
                     <li>
                         <a href="../index.html">
                             <span class="icon">
@@ -113,7 +90,7 @@
                     <div class="sub-menu-wrap" id="subMenu">
                        <div class="sub-menu">
                         <div class="user-info">
-                            <h3>Regional Hospital Bamenda</h3>
+                            <h3>Prech</h3>
                         </div>
                         <hr>
                         <a href="#" class="sub-menu-link">
@@ -144,101 +121,23 @@
             </div>
 
             <!--Cards-->
-            <div class="cardbox">
-                <div class="card">
-                    <div class="content">
-                        <div class="iconBx">
-                            <img src="../assets/images/blddrop.jpg" alt="..."></img>
-                           </div>
-                       <div class="cardname">A+ </div>
-                       <div class="numbers">25</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="content">
-                        <div class="iconBx">
-                            <img src="../assets/images/blddrop.jpg" alt="..."></img>
-                           </div>
-                       <div class="cardname">B+ </div>
-                       <div class="numbers">10</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="content">
-                        <div class="iconBx">
-                            <img src="../assets/images/blddrop.jpg" alt="..."></img>
-                           </div>
-                       <div class="cardname">O+</div>
-                       <div class="numbers">10</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="content">
-                        <div class="iconBx">
-                            <img src="../assets/images/blddrop.jpg" alt="..."></img>
-                           </div>
-                       <div class="cardname">AB+</div>
-                       <div class="numbers">100</div>
-                    </div>
-                </div>
-            </div>
-            <div class="cardbox-2">
-                <div class="cardbox">
-                    <div class="card">
-                        <div class="content">
-                            <div class="iconBx">
-                                <img src="../assets/images/blddrop.jpg" alt="..."></img>
-                               </div>
-                           <div class="cardname">A- </div>
-                           <div class="numbers">25</div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="content">
-                            <div class="iconBx">
-                                <img src="../assets/images/blddrop.jpg" alt="..."></img>
-                            </div>
-                           <div class="cardname">B- </div>
-                           <div class="numbers">40</div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="content">
-                            <div class="iconBx">
-                                <img src="../assets/images/blddrop.jpg" alt="..."></img>
-                               </div>
-                           <div class="cardname">O-</div>
-                           <div class="numbers">40</div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="content">
-                            <div class="iconBx">
-                                <img src="../assets/images/blddrop.jpg" alt="..."></img>
-                               </div>
-                           <div class="cardname">AB-</div>
-                           <div class="numbers">100</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
                 <div class="cardbox-3">
                     <div class="card">
                         <div class="content">
                             <div class="iconBx">
-                                <i class="ri-group-fill"></i>
+                                <i class="ri-calendar-schedule-line"></i>
                             </div>
-                            <div class="cardname">Total Donors</div>
-                            <div class="numbers">10</div>
+                            <div class="cardname">Total Appointments</div>
+                            <div class="numbers">2</div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="content">
                             <div class="iconBx">
-                                <i class="ri-refresh-line"></i>
+                                <i class="ri-message-line"></i>
                             </div>
-                            <div class="cardname">Total Requests</div>
-                            <div class="numbers">10</div>
+                            <div class="cardname">Total Messages</div>
+                            <div class="numbers">5</div>
                         </div>
                     </div>
                     <div class="card">
@@ -255,8 +154,8 @@
                             <div class="iconBx">
                                 <i class="ri-drop-fill"></i>
                             </div>
-                            <div class="cardname">Total Blood (in bags)</div>
-                            <div class="numbers">70 Bags</div>
+                            <div class="cardname">Blood Donated (in bags)</div>
+                            <div class="numbers">5 Bags</div>
                         </div>
                     </div>
                 </div>
