--- a/about_us.html
+++ b/about_us.html
@@ -10,8 +10,9 @@
 <body>
     <div class="text">
         <h1>About Us</h1>
-        <h3>Welcome to </h3>
-        <p>At Cloud Blood Bank, we are dedicated to saving lives by making the process of blood donation and request seamless and efficient. Our cloud-based platform connects blood donors with those in need,
+        <h3>Welcome to E-<span>Vitalant</span></h3>
+        <h6>Saving lives , one drop at a time</h6>
+        <p>E-Vitalant (Vital and Life-giving)is a cloud based blood bank system whose aim is to save lives by making the process of blood donation and request seamless and efficient. Our cloud-based platform connects blood donors with those in need,
          leveraging the power of technology to ensure that life-saving blood is available when and where it is needed most</p>
         <h3>Our Mission</h3>
         <p>Our mission is to create a reliable, accessible, and user-friendly blood bank system that enhances the efficiency of blood donation and distribution. We strive to bridge the gap between donors and recipients by providing a
