--- a/request.html
+++ b/request.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="CSS/request.css" rel="stylesheet">
-        <title>Donor Registration</title>
+        <title>Request Blood</title>
     
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -19,41 +19,15 @@
         </div>
         <section class="container my-2  w-50 text-light p-2">
             <form class="row g-3">
-              <div class="col-md-6">
-                <label for="validationCustom01" class="form-label">Patient's Name</label>
-                <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
-                <div class="valid-feedback">
-                  Looks good!
-                </div>
+              <div class="col-12">
+                <label for="inputName" class="form-label">User Name</label>
+                <input type="text" class="form-control" id="inputUname" placeholder="@Prech">
               </div>
-              <div class="col-md-6">
-                <label for="validationCustom02" class="form-label">Last name</label>
-                <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
-                <div class="valid-feedback">
-                  Looks good!
-                </div>
-              </div>
-              </div>
-                <div class="col-md-6">
-                  <label for="inputEmail4" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="inputEmail4">
-                </div>
-                <div class="col-md-6">
-                  <label for="inputNumber" class="form-label">Phone number</label>
-                  <input type="text" class="form-control" id="inputPassword4">
-                </div>
                 <div class="col-12">
                   <label for="inputAddress" class="form-label">Hospital Address</label>
                   <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
                 </div>
                 <div class="col-12">
-                  <label for="inputgender" class="form-label">Gender</label>
-                  <select id="inputState" class="form-select">
-                  <option selected>Female</option>
-                  <option>Male</option>
-                  </select>
-                  <label for="dob" class="form-label">Date of Birth:</label>
-                  <input type="date" id="dob" name="dob" class="form-control">
                   <label for="inputAddress2" class="form-label">Reason For Blood Request</label>
                   <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
                   <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
@@ -75,24 +49,11 @@
                   </select>
                 </div>
                 </div>
-                <div class="col-md-6">
-                  <label for="inputCity" class="form-label">City</label>
-                  <input type="text" class="form-control" id="inputCity">
-                </div>
-                <div class="col-md-4">
-                  <label for="inputZip" class="form-label">Postal-Code</label>
-                  <input type="text" class="form-control" id="inputZip">
-                  
-                </div>
-                <div class="col-md-2">
-                  <label for="inputZip" class="form-label">Zip</label>
-                  <input type="text" class="form-control" id="inputZip">
-                </div>
                 <div class="col-12">
                   <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="gridCheck">
                     <label class="form-check-label" for="gridCheck">
-                      I am donating at free will..
+                    I am Eligible...
                     </label>
                   </div>
                 </div>
